test/corpus/rules.txt
=====
Rules
=====

head_pred(a, B) :- sub_1 & sub_2

---

(code
  (rule
    head: (literal
            predicate: (constant)
            args: (literal_args
                    (constant)
                    (variable)))
    body: (rule_body
            (literal
              predicate: (constant))
            (literal
              predicate: (constant)))))
